--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mips-node",
-  "version": "1.0.2",
-  "description": "MIPS Emulator (C++) as NPM module",
+  "version": "1.0.4",
+  "description": "MIPS-1 Emulator (C++) as NPM module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
